testdata/fixtures/103-dir-multi-file/dir1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    version: 2
spec:
  replicas: 1
  containers:
    - name: app
      image: nginx
