testdata/fixtures/103-dir-multi-file/dir1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  defaultBackend:
    service:
      name: myapp
      port:
        number: 80
