testdata/fixtures/103-dir-multi-file/dir1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: myapp
    tier: frontend
    version: "1"
spec:
  port: 80
  tags:
    - name: stable
    - name: production
    - name: canary
